--- a/Admin/Assets/css/admin-style.css
+++ b/Admin/Assets/css/admin-style.css
@@ -171,7 +171,7 @@
 .primekit-switch input:checked + .primekit-slider:before {
   transform: translateX(26px);
 }
-#freePro .primekit-slider {
+#freePro .primekit-switch {
   display: none;
 }
 .primekit-switch-label {
